<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_back_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".AddRecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        style="@style/toolbar"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/setting_back_btn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/settings_heading"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_margin="5dp"
                style="@style/toolbar"
                android:background="@null"
                android:layout_marginStart="48dp"
                android:text="@string/addTitle"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting_back_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/category"
                android:textSize="28sp" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:dropDownSelector="?attr/colorPrimary"
                android:padding="4dp"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/name_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="15dp"
                android:paddingStart="5dp"
                android:text="@string/name"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnBackground"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/nameHint"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recipe_img_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/colorOnBackground"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@android:drawable/ic_menu_camera"/>

                <ImageButton
                    android:id="@+id/add_img_btn"
                    style="@style/RegularButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    app:srcCompat="@drawable/small_add_button_style" />

            </LinearLayout>

            <TextView
                android:id="@+id/tags_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="@string/tags"
                android:textSize="28sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tag_list_tv"
                android:layout_width="match_parent"
                android:background="?attr/colorOnBackground"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorOnBackground"
                    android:ems="10"
                    android:hint="@string/tagHint"
                    android:inputType="textPersonName" />

                <ImageButton
                    android:id="@+id/add_tag"
                    style="@style/RegularButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    app:srcCompat="@drawable/small_add_button_style" />

            </LinearLayout>

            <TextView
                android:id="@+id/ingredients_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/ingredients"
                android:textSize="28sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnBackground"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_ingredient_quantity_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textAlignment="viewEnd" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorOnBackground"
                    android:ems="10"
                    android:hint="@string/ingredientHint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorOnBackground"
                    android:ems="10"
                    android:hint="@string/quantityHint"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd" />

                <ImageButton
                    android:id="@+id/add_ingredient_btn"
                    style="@style/RegularButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    app:srcCompat="@drawable/small_add_button_style" />
            </LinearLayout>

            <TextView
                android:id="@+id/directions_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/directions"
                android:textSize="28sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selected_direction_list"
                android:layout_width="match_parent"
                android:background="?attr/colorOnBackground"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/colorOnBackground"
                    android:ems="10"
                    android:hint="@string/directionHint"
                    android:inputType="textMultiLine" />

                <ImageButton
                    android:id="@+id/add_direction_btn"
                    style="@style/RegularButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="3dp"
                    app:srcCompat="@drawable/small_add_button_style" />
            </LinearLayout>

            <Button
                android:id="@+id/edit_btn"
                style="@style/RegularButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/saveBtn"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>