<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/background"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:paddingTop="5dp"
        style="@style/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/setting_back_btn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/settings_heading"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_margin="5dp"
                android:layout_marginStart="48dp"
                android:paddingEnd="20dp"
                style="@style/toolbar"
                android:background="@null"
                android:text="Recipe Name"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting_back_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_img_view"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/default_recipe_img" />


            <TextView
                android:id="@+id/tag_list_tv"
                style="@style/BackgroundTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="3dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="TextView"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimaryVariant"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/ingredients_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/ingredients"
                android:textSize="28sp" />

            <LinearLayout
                style="@style/BackgroundTextBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_ingredient_quantity_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <TextView
                android:id="@+id/directions_title"
                style="@style/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/directions"
                android:textSize="28sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/BackgroundTextBox"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_direction_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>


            <Button
                android:id="@+id/edit_btn"
                style="@style/RegularButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/editBtn"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>